--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Logica/GFive.Tienda.Servicio.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Logica/GFive.Tienda.Servicio.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaServicio.cs" />
+    <Compile Include="CuentaServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioServicio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GFive.Tienda.Modelos\GFive.Tienda.Modelos.csproj">
