--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Modelos/GFive.Tienda.Modelos.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Modelos/GFive.Tienda.Modelos.csproj
@@ -43,11 +43,13 @@
   <ItemGroup>
     <Compile Include="Cargo.cs" />
     <Compile Include="Categoria.cs" />
+    <Compile Include="Cuenta.cs" />
     <Compile Include="Departamento.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
     <Compile Include="Turno.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
