--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Repositorio/GFive.Tienda.Repositorio.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Repositorio/GFive.Tienda.Repositorio.csproj
@@ -42,12 +42,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaRepositorio.cs" />
+    <Compile Include="CuentaRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GFive.Tienda.Conexion\GFive.Tienda.Conexion.csproj">
       <Project>{09828f93-f5d0-457b-b00c-c9b30928ea0f}</Project>
       <Name>GFive.Tienda.Conexion</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GFive.Tienda.Modelos\GFive.Tienda.Modelos.csproj">
+      <Project>{70545589-552F-4711-9720-5C40A312F9D6}</Project>
+      <Name>GFive.Tienda.Modelos</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
