--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Conexion/GFive.Tienda.Conexion.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Conexion/GFive.Tienda.Conexion.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="IBM.Data.DB2, Version=9.7.4.4, Culture=neutral, PublicKeyToken=7c307b91aa13d208, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files\IBM\SQLLIB\BIN\netf40\IBM.Data.DB2.dll</HintPath>
+      <HintPath>C:\DB2\IBM\SQLLIB\BIN\netf40\IBM.Data.DB2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
