--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Logica/GFive.Tienda.Servicio.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Logica/GFive.Tienda.Servicio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CategoriaServicio.cs" />
     <Compile Include="CuentaServicio.cs" />
+    <Compile Include="ProductoServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioServicio.cs" />
   </ItemGroup>
