--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Repositorio/GFive.Tienda.Repositorio.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Repositorio/GFive.Tienda.Repositorio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CategoriaRepositorio.cs" />
     <Compile Include="CuentaRepositorio.cs" />
+    <Compile Include="ProductoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
