Agregando imagenes e iconos

--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Presentacion/GFive.Tienda.Presentacion.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Presentacion/GFive.Tienda.Presentacion.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -143,6 +144,15 @@
       <Project>{70545589-552f-4711-9720-5c40a312f9d6}</Project>
       <Name>GFive.Tienda.Modelos</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Password.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
