--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Logica/GFive.Tienda.Servicio.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Logica/GFive.Tienda.Servicio.csproj
@@ -42,12 +42,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoriaServicio.cs" />
+    <Compile Include="ClienteServicio.cs" />
     <Compile Include="CuentaServicio.cs" />
     <Compile Include="ProductoServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioServicio.cs" />
+    <Compile Include="VentaServicio.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\GFive.Tienda.Conexion\GFive.Tienda.Conexion.csproj">
+      <Project>{09828F93-F5D0-457B-B00C-C9B30928EA0F}</Project>
+      <Name>GFive.Tienda.Conexion</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GFive.Tienda.Modelos\GFive.Tienda.Modelos.csproj">
       <Project>{70545589-552F-4711-9720-5C40A312F9D6}</Project>
       <Name>GFive.Tienda.Modelos</Name>
