--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Modelos/GFive.Tienda.Modelos.csproj
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Modelos/GFive.Tienda.Modelos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Cargo.cs" />
     <Compile Include="Categoria.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="Cuenta.cs" />
     <Compile Include="Departamento.cs" />
     <Compile Include="Producto.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Proveedor.cs" />
     <Compile Include="Turno.cs" />
     <Compile Include="Usuario.cs" />
+    <Compile Include="Venta.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
